update:Fixed an issue where the input box was not centered when the form was vertical aligned.

--- a/styles/form.less
+++ b/styles/form.less
@@ -186,7 +186,10 @@ input[type="checkbox"]:focus {
 
   .@{ns}input {
     display: inline-block;
-    // Fixed inline element will produce a whitespace
+  }
+
+  // Fixed inline element will produce a whitespace
+  textarea.@{ns}input {
     vertical-align: bottom;
   }
 }
